--- a/web/front/src/assets/css/speaker.scss
+++ b/web/front/src/assets/css/speaker.scss
@@ -9,3 +9,26 @@
   color: #fff;
   font-size: 0.5rem;
 }
+
+.speaker {
+  .vue-slider-process {
+    width: 100% !important;
+    left: 0 !important;
+    transition: none !important;
+    overflow: hidden;
+    position: relative;
+    background-color: transparent !important;
+
+    .level-meter {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 100%;
+      background-color: pink;
+      transition-property: right;
+      transition-duration: 200ms;
+
+    }
+  }
+}
