--- a/web/front/src/assets/css/speaker.css
+++ b/web/front/src/assets/css/speaker.css
@@ -10,7 +10,7 @@
   font-size: 0.5rem;
 }
 
-.speaker .vue-slider-process {
+.level-meter-slider .vue-slider-process {
   width: 100% !important;
   left: 0 !important;
   transition: none !important;
@@ -19,7 +19,7 @@
   background-color: transparent !important;
 }
 
-.speaker .vue-slider-process .level-meter {
+.level-meter-slider .vue-slider-process .level-meter {
   position: absolute;
   width: 100%;
   height: 100%;
