--- a/web/front/src/assets/css/speaker.scss
+++ b/web/front/src/assets/css/speaker.scss
@@ -10,7 +10,7 @@
   font-size: 0.5rem;
 }
 
-.speaker {
+.level-meter-slider {
   .vue-slider-process {
     width: 100% !important;
     left: 0 !important;
@@ -18,17 +18,16 @@
     overflow: hidden;
     position: relative;
     background-color: transparent !important;
-
     .level-meter {
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
-      right: 100%;
+      right:100%;
       background-color: pink;
       transition-property: right;
       transition-duration: 200ms;
-
+    
     }
   }
 }
