--- a/web/front/src/assets/css/popper.scss
+++ b/web/front/src/assets/css/popper.scss
@@ -1,5 +1,5 @@
 .popper {
-  > div {
+  >div {
     margin-bottom: 1rem;
     position: relative;
     z-index: 0;
@@ -16,11 +16,10 @@
         height: 10px;
         position: absolute;
         z-index: -1;
-        background: #fff;
+        background: var(--color-secondary-bg);
         top: 0;
         left: 0;
-        -webkit-transition: -webkit-transform 0.2s ease-out,
-          visibility 0.2s ease-out;
+        -webkit-transition: -webkit-transform 0.2s ease-out, visibility 0.2s ease-out;
         transition: transform 0.2s ease-out, visibility 0.2s ease-out;
         visibility: visible;
         -webkit-transform: translateX(0px) rotate(45deg);
@@ -28,31 +27,32 @@
         -ms-transform: translateX(0px) rotate(45deg);
         transform: translateX(0px) rotate(45deg);
         transform-origin: center;
-        border-color: #22d0b2;
+        border-color: var(--color-border-hover);
         border-width: 1px;
         border-style: solid;
       }
 
-      > div {
+      >div {
         width: 14px;
         height: 7px;
         position: absolute;
         bottom: 5px;
         left: -2px;
         z-index: 1;
-        background-color: #fff;
+        background-color: var(--color-body-bg);
       }
     }
   }
 
   .channel-name {
     display: inline-block;
-    background: #ffffff;
+    background: var(--color-body-bg);
+    color: var(--color-text);
     font-weight: bold;
     padding: 5px 10px;
     font-size: 13px;
     border-radius: 4px;
-    border-color: #22d0b2;
+    border-color: var(--color-border-hover);
     border-width: 1px;
     border-style: solid;
   }
@@ -70,13 +70,13 @@
   }
 
   &[data-popper-placement^='bottom'] {
-    > .arrow[data-popper-arrow] {
+    >.arrow[data-popper-arrow] {
       top: -4px;
     }
   }
 
   &[data-popper-placement^='left'] {
-    > .arrow[data-popper-arrow] {
+    >.arrow[data-popper-arrow] {
       right: -4px;
     }
   }
