--- a/web/front/src/assets/css/global.scss
+++ b/web/front/src/assets/css/global.scss
@@ -51,7 +51,7 @@ $nav-item-width: 98px !default;
   --color-primary-bg: #eaeffd;
   --color-secondary: #7a7a7b;
   --color-secondary-bg: #f5f5f7;
-  --color-navbar-bg: rgba(255, 255, 255);
+  --color-navbar-bg: rgba(255, 255, 255, 1);
   --color-primary-bg-for-transparent: rgba(189, 207, 255, 0.28);
   --color-secondary-bg-for-transparent: rgba(209, 209, 214, 0.28);
   --color-border: #cfcfcf;
@@ -67,7 +67,7 @@ $nav-item-width: 98px !default;
   --color-primary-bg: #bbcdff;
   --color-secondary: #7a7a7b;
   --color-secondary-bg: #323232;
-  --color-navbar-bg: rgba(34, 34, 34);
+  --color-navbar-bg: rgba(34, 34, 34, 1);
   --color-primary-bg-for-transparent: rgba(255, 255, 255, 0.12);
   --color-secondary-bg-for-transparent: rgba(255, 255, 255, 0.08);
   --color-border: #525252;
@@ -83,7 +83,6 @@ input {
 
 body {
   background-color: var(--color-body-bg);
-  color: var(--color-text);
   overflow: hidden;
 }
 
@@ -91,6 +90,10 @@ html {
   overflow-y: var(--html-overflow-y);
   min-width: 370px;
   overscroll-behavior: none;
+}
+
+* {
+  color: var(--color-text);
 }
 
 select,
