--- a/web/front/src/assets/css/speaker.scss
+++ b/web/front/src/assets/css/speaker.scss
@@ -18,19 +18,21 @@
     overflow: hidden;
     position: relative;
     background-color: transparent !important;
+
     .level-meter {
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
-      right:100%;
+      right: 100%;
       background-color: pink;
       transition-property: right;
       transition-duration: 200ms;
-    
+
     }
   }
 }
+
 .speaker-list {
   display: flex;
   justify-content: center;
@@ -56,11 +58,12 @@
       }
     }
 
-    > div {
+    >div {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
       line-height: 2rem;
+      align-items: center;
 
       .svg-icon {
         flex: 0 0 16px;
@@ -82,6 +85,7 @@
       }
 
       .channel-name {
+        cursor: pointer;
         flex: 0 0 auto;
         width: auto;
         white-space: nowrap;
