--- a/web/front/src/assets/css/speaker.scss
+++ b/web/front/src/assets/css/speaker.scss
@@ -25,7 +25,7 @@
       height: 100%;
       top: 0;
       right: 100%;
-      background-color: pink;
+      background-color: var(--color-level-meter);
       transition-property: right;
       transition-duration: 200ms;
 
@@ -48,7 +48,7 @@
     margin: 0;
     padding: 10px;
     width: 100%;
-    min-width: 330px;
+    min-width: 300px;
 
     &:hover {
       border-color: var(--color-border-hover);
